--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 								   		<th>
 								       		<td style="vertical-align: top" width="50%">
 
-								       			Margaux Le Guillous, 19 ans, étudiante en première année de BTS communication. Issue d'un Bac Professionnel Productions Graphiques, j'apporte mes connaissances en graphisme.
+								       			Margaux Le Guillous, 19 ans, étudiante en première année de BTS communication. 
+								       			Issue d'un Bac Professionnel Productions Graphiques, j'apporte mes connaissances en graphisme.
 				       			
 								       		</td>
 
