Modification texte sur page index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 								   		<th>
 								       		<td style="vertical-align: top" width="50%">
 
-								       			Margaux Le Guillous, 19 ans, étudiante en première année de BTS communication. 
+								       			Margaux Le Guillous, 19 ans, étudiante en première année de BTS communication à CESACOM. 
 								       			Issue d'un Bac Professionnel Productions Graphiques, j'apporte mes connaissances en graphisme.
 				       			
 								       		</td>
